--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,3 +1,8 @@
+- id: doi:10.21105/joss.03249
+  date: 2021-5-9
+  tags:
+    - software
+
 - id: doi:10.1016/j.csbj.2020.05.017
   image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
   date: 2020-6-2
