--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -1,4 +1,5 @@
 - id: doi:10.21105/joss.03249
+  image: https://github.com/BioMeCIS-Lab/OpenOmics/raw/master/openomics_web/assets/openomics_logo.png
   date: 2021-5-9
   tags:
     - software
