--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -1,63 +1,57 @@
 # GENERATED AUTOMATICALLY, DO NOT EDIT
 
-- id: doi:10.1016/j.csbj.2020.05.017
-  title: Constructing knowledge graphs and their biomedical applications
+- id: arxiv:1901.07643
+  title: Solving All Regression Models For Learning Gaussian Networks Using Givens
+    Rotations
   authors:
-  - David N. Nicholson
-  - Casey S. Greene
-  publisher: Computational and Structural Biotechnology Journal
-  date: '2020-06-02'
-  link: https://doi.org/gg7m48
-  image: https://ars.els-cdn.com/content/image/1-s2.0-S2001037020302804-gr1.jpg
-  extra-links:
-  - type: manubot
-    link: https://greenelab.github.io/knowledge-graph-review/
+  - Borzou Alipourfard
+  - Jean X. Gao
+  publisher: arXiv
+  date: '2020-12-29'
+  link: https://arxiv.org/abs/1901.07643
+- id: arxiv:2009.08072
+  title: Layer-stacked Attention for Heterogeneous Network Embedding
+  authors:
+  - Nhat Tran
+  - Jean Gao
+  publisher: arXiv
+  date: '2020-09-18'
+  link: https://arxiv.org/abs/2009.08072
+- id: arxiv:1810.08749
+  title: Renormalized Normalized Maximum Likelihood and Three-Part Code Criteria For
+    Learning Gaussian Networks
+  authors:
+  - Borzou Alipourfard
+  - Jean X. Gao
+  publisher: arXiv
+  date: '2020-12-29'
+  link: https://arxiv.org/abs/1810.08749
+- id: doi:10.1186/s12859-018-2536-0
+  title: 'MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory
+    modules across subtypes in non-small cell lung cancers'
+  authors:
+  - Nhat Tran
+  - Vinay Abhyankar
+  - KyTai Nguyen
+  - Jon Weidanz
+  - Jean Gao
+  publisher: BMC Bioinformatics
+  date: '2018-12-21'
+  link: https://doi.org/ggjv5f
+  image: https://www.ncbi.nlm.nih.gov/pmc/articles/instance/6302368/bin/12859_2018_2536_Fig3_HTML.gif
+- id: doi:10.21105/joss.03249
+  title: 'OpenOmics: A bioinformatics API to integrate multi-omics datasets and interface
+    with public databases.'
+  authors:
+  - Nhat Tran
+  - Jean Gao
+  publisher: Journal of Open Source Software
+  date: '2021-05-09'
+  link: https://doi.org/gjxk6m
+  image: https://github.com/BioMeCIS-Lab/OpenOmics/raw/master/openomics_web/assets/openomics_logo.png
   tags:
-  - knowledge graphs
-- id: doi:10.1371/journal.pcbi.1007128
-  title: Open collaborative writing with Manubot
-  authors:
-  - Daniel S. Himmelstein
-  - Vincent Rubinetti
-  - David R. Slochower
-  - Dongbo Hu
-  - Venkat S. Malladi
-  - Casey S. Greene
-  - Anthony Gitter
-  publisher: PLOS Computational Biology
-  date: '2019-06-24'
-  link: https://doi.org/c7np
-  image: https://journals.plos.org/ploscompbiol/article/figure/image?size=inline&id=info:doi/10.1371/journal.pcbi.1007128.g001&rev=2
-  repo: greenelab/meta-review
+  - software
   extra-links:
-  - type: manubot
-    link: https://greenelab.github.io/meta-review/
   - type: source
-    link: https://github.com/greenelab/meta-review
-  - type: website
-    link: http://manubot.org/
-- id: doi:10.7554/eLife.32822
-  title: Sci-Hub provides access to nearly all scholarly literature
-  authors:
-  - Daniel S Himmelstein
-  - Ariel Rodriguez Romero
-  - Jacob G Levernier
-  - Thomas Anthony Munro
-  - Stephen Reid McLaughlin
-  - Bastian Greshake Tzovaras
-  - Casey S Greene
-  publisher: eLife
-  date: '2018-03-01'
-  link: https://doi.org/ckcj
-  image: https://iiif.elifesciences.org/lax:32822%2Felife-32822-fig8-v3.tif/full/863,/0/default.webp
-  extra-links:
-  - type: preprint
-    link: https://doi.org/10.7287/peerj.preprints.3100v1
-  - type: manubot
-    link: https://greenelab.github.io/scihub-manuscript/
-  - type: source
-    link: https://github.com/greenelab/scihub-manuscript
-    text: Manuscript source
-  - type: source
-    link: https://github.com/greenelab/scihub
-    text: Analyses source
+    link: https://github.com/BioMeCIS-Lab/OpenOmics
+  description: A tool
