added new citation

--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -21,7 +21,7 @@
 
 ##################################################### Journal papers ###################################################
 
-
+- id: doi:10.1109/TCBB.2016.2591521
 
 # Examples:
 
