--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -9,10 +9,6 @@
 # Renormalized Normalized Maximum Likelihood and Three-Part Code Criteria For Learning Gaussian Networks
 - id: arxiv:1810.08749
 
-# MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory modules across subtypes in non-small cell lung cancers
-- id: doi:10.1186/s12859-018-2536-0
-  image: https://media.springernature.com/lw685/springer-static/image/art%3A10.1186%2Fs12859-018-2536-0/MediaObjects/12859_2018_2536_Fig1_HTML.png?as=webp
-
 # OpenOmics: A bioinformatics API to integrate multi-omics datasets and interface with public databases.
 - id: doi:10.21105/joss.03249
   image: https://github.com/BioMeCIS-Lab/OpenOmics/raw/master/openomics_web/assets/openomics_logo.png
@@ -25,8 +21,15 @@
 
 ##################################################### Journal papers ###################################################
 
+# MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory modules across subtypes in non-small cell lung cancers
+- id: doi:10.1186/s12859-018-2536-0
+  image: https://media.springernature.com/lw685/springer-static/image/art%3A10.1186%2Fs12859-018-2536-0/MediaObjects/12859_2018_2536_Fig1_HTML.png?as=webp
+  tags:
+    - journal
+
 # Multi-Block Bipartite Graph for Integrative Genomic Analysis
 - id: doi:10.1109/TCBB.2016.2591521
+  image: https://ieeexplore.ieee.org/ielx7/8857/8169258/7513454/graphical_abstract/tcbb-gagraphic-2591521.jpg
   tags:
     - journal
 
@@ -38,6 +41,7 @@
 
 # Stable solution to l-2,1-based robust inductive matrix completion and its application in linking long noncoding RNAs to human diseases
 - id: doi:10.1186/s12920-017-0310-1
+  image: https://media.springernature.com/lw685/springer-static/image/art%3A10.1186%2Fs12920-017-0310-1/MediaObjects/12920_2017_310_Fig1_HTML.gif?as=webp
   tags:
     - journal
 
