--- a/_data/citations.yaml
+++ b/_data/citations.yaml
@@ -26,19 +26,6 @@
   publisher: arXiv
   date: '2020-12-29'
   link: https://arxiv.org/abs/1810.08749
-- id: doi:10.1186/s12859-018-2536-0
-  title: 'MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory
-    modules across subtypes in non-small cell lung cancers'
-  authors:
-  - Nhat Tran
-  - Vinay Abhyankar
-  - KyTai Nguyen
-  - Jon Weidanz
-  - Jean Gao
-  publisher: BMC Bioinformatics
-  date: '2018-12-21'
-  link: https://doi.org/ggjv5f
-  image: https://media.springernature.com/lw685/springer-static/image/art%3A10.1186%2Fs12859-018-2536-0/MediaObjects/12859_2018_2536_Fig1_HTML.png?as=webp
 - id: doi:10.21105/joss.03249
   title: 'OpenOmics: A bioinformatics API to integrate multi-omics datasets and interface
     with public databases.'
@@ -55,6 +42,21 @@
   - type: source
     link: https://github.com/BioMeCIS-Lab/OpenOmics
   description: A tool
+- id: doi:10.1186/s12859-018-2536-0
+  title: 'MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory
+    modules across subtypes in non-small cell lung cancers'
+  authors:
+  - Nhat Tran
+  - Vinay Abhyankar
+  - KyTai Nguyen
+  - Jon Weidanz
+  - Jean Gao
+  publisher: BMC Bioinformatics
+  date: '2018-12-21'
+  link: https://doi.org/ggjv5f
+  image: https://media.springernature.com/lw685/springer-static/image/art%3A10.1186%2Fs12859-018-2536-0/MediaObjects/12859_2018_2536_Fig1_HTML.png?as=webp
+  tags:
+  - journal
 - id: doi:10.1109/TCBB.2016.2591521
   title: Multi-Block Bipartite Graph for Integrative Genomic Analysis
   authors:
