--- a/_data/sources.yaml
+++ b/_data/sources.yaml
@@ -26,6 +26,13 @@
   tags:
     - software
 
+# Robust Inductive Matrix Completion strategy to explore associations between lincRNAs and human disease phenotypes
+- id: doi:10.1109/BIBM.2016.7822542
+  image: https://d3i71xaburhd42.cloudfront.net/32663097e3ccb5ae374634235d6503f0bc0b4f69/5-Figure1-1.png
+  tags:
+   - conference
+
+
 ##################################################### Journal papers ###################################################
 
 # MicroRNA dysregulational synergistic network: discovering microRNA dysregulatory modules across subtypes in non-small cell lung cancers
