_data/sources.yaml now moved to research/publications-conference.yaml and reserach/publications-journal.yaml

--- a/.github/workflows/auto-cite.yaml
+++ b/.github/workflows/auto-cite.yaml
@@ -5,10 +5,10 @@ on:
     branches:
       - main
     paths:
-      - "_data/sources.yaml"
+      - "_data/publications-conference.yaml"
   pull_request:
     paths:
-      - "_data/sources.yaml"
+      - "_data/publications-conference.yaml"
 
 jobs:
   update_research:
